--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
     <h1>Grayson Davis</h1>
-    <p>Test test test test test</p>
-    <p>test test test test test</p>
+    <p>Welcome to my website</p>
 </body>
 </html>
