--- a/index.html
+++ b/index.html
@@ -3,24 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My GitHub Pages Website</title>
+  <title>Grayson R. Davis</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 2rem;
+      margin: 0;
       background-color: #f4f4f4;
       color: #333;
     }
     header {
       text-align: center;
-      padding-bottom: 1rem;
+      background-color: #fff;
+      padding: 1rem 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    .banner {
+      width: 100%;
+      height: 300px;
+      background: url('your-banner-image-url-here.jpg') no-repeat center center;
+      background-size: cover;
+    }
+    nav {
+      text-align: center;
+      background-color: #007acc;
+      padding: 0.5rem 0;
     }
     nav a {
-      margin: 0 10px;
+      margin: 0 15px;
       text-decoration: none;
-      color: #007acc;
+      color: white;
+      font-weight: bold;
     }
     main {
+      max-width: 800px;
+      margin: 2rem auto;
       background: white;
       padding: 2rem;
       border-radius: 8px;
@@ -28,41 +48,20 @@
     }
     footer {
       text-align: center;
-      margin-top: 2rem;
+      margin: 2rem 0;
       font-size: 0.9em;
       color: #777;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Welcome to My Website!</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <h1>Grayson R. Davis</h1>
   </header>
 
-  <main>
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Hello! I'm excited to share my projects and thoughts here. This website is hosted with GitHub Pages.</p>
-    </section>
+  <div class="banner"></div>
 
-    <section id="projects">
-      <h2>Projects</h2>
-      <p>Here I'll list some cool things I've been working on.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>You can reach me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2025 Your Name. All rights reserved.
-  </footer>
-</body>
-</html>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#projects
