--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <h1>Grayson R. Davis</h1>
   </header>
 
-  <div class="banner"></div>
+  <div class="banner" style="background-image: url('fuji_pic_small.jpg');"></div>
 
   <nav>
     <a href="#about">About</a>
