--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       font-size: 1.1rem;
     }
     main {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 2rem auto;
       background: white;
       padding: 2rem;
@@ -53,21 +53,35 @@
     }
     #about {
       display: flex;
-      flex-wrap: wrap;
       align-items: center;
+      gap: 2rem;
     }
     #about img {
       width: 200px;
-      border-radius: 50%;
-      margin-right: 2rem;
-      margin-bottom: 1rem;
+      height: 200px;
       object-fit: cover;
+      border-radius: 50%;
+      flex-shrink: 0;
+    }
+    #about-text {
+      flex: 1;
     }
     footer {
       text-align: center;
       margin: 2rem 0;
       font-size: 0.9em;
       color: #777;
+    }
+
+    /* Make the layout adjust nicely on small screens */
+    @media (max-width: 768px) {
+      #about {
+        flex-direction: column;
+        text-align: center;
+      }
+      #about img {
+        margin-bottom: 1rem;
+      }
     }
   </style>
 </head>
@@ -88,7 +102,7 @@
   <main>
     <section id="about">
       <img src="headshot.jpg" alt="Grayson R. Davis headshot">
-      <div>
+      <div id="about-text">
         <h2>About</h2>
         <p>Hello! I'm Grayson R. Davis. I'm passionate about mathematics, research, and sharing knowledge. Welcome to my personal website hosted on GitHub Pages.</p>
       </div>
