--- a/index.html
+++ b/index.html
@@ -104,28 +104,33 @@
       <img src="headshot.jpg" alt="Grayson R. Davis headshot">
       <div id="about-text">
         <h2>About</h2>
-        <p>Hello! I'm Grayson R. Davis. I'm passionate about mathematics, research, and sharing knowledge. Welcome to my personal website hosted on GitHub Pages.</p>
+        <p>I am a first-year PhD student at the Courant Institute of the Mathematical Sciences at New York University.
+            I am originally from Coquitlam, BC, Canada, and received my BSc in Mathematics from Simon Fraser University in 2020.
+        </p>
       </div>
     </section>
 
     <section id="research">
       <h2>Research Interests</h2>
-      <p>Here I will describe my research interests, such as partial differential equations, analysis, singularity formation, and computer-assisted proofs.</p>
+      <p>I am currently interested in the analysis of partial differential equations and computer-assisted proofs in analysis.
+      </p>
     </section>
 
     <section id="notes">
-      <h2>Notes</h2>
-      <p>I'll post some notes here from my studies, talks, or research projects. Stay tuned!</p>
+      <h2>Notes & Other Writing</h2>
+      <p><a href="nyu_grad_topology_i_notes.pdf" target="_blank">MATH-GA.2310 Topology I Notes (NYU)</a>.</p>
+        <p><a href="grd_hons_thesis.pdf" target="_blank">Honours Thesis</a>, advised by Professor Nilima Nigam (SFU).</p>
     </section>
 
     <section id="cv">
       <h2>CV</h2>
-      <p>You can download my CV <a href="cv.pdf" target="_blank">here</a>.</p>
+      <p><a href="CV_apr_2025.pdf" target="_blank">CV</a>(Updated April 2025).</p>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+      <p>Email: grayson.davis@nyu.edu</p>
+      <p>Office: 608 Warren Weaver Hall</p>
     </section>
   </main>
 
