--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
       <div id="about-text">
         <h2>About</h2>
         <p>I am a first-year PhD student at the Courant Institute of the Mathematical Sciences at New York University.
-            I am originally from Coquitlam, BC, Canada, and received my BSc in Mathematics from Simon Fraser University in 2020.
+            I am originally from Coquitlam, BC, Canada, and received my BSc (Hons.) in Mathematics from Simon Fraser University in 2020. 
+            In my free time, I like to watch anime, go for walks/hikes, and check out the newest hit musicals on Broadway.
         </p>
       </div>
     </section>
@@ -113,6 +114,7 @@
     <section id="research">
       <h2>Research Interests</h2>
       <p>I am currently interested in the analysis of partial differential equations and computer-assisted proofs in analysis.
+        My undergraduate research background is in the areas of kinetic equations and numerical spectral geometry.
       </p>
     </section>
 
@@ -124,7 +126,7 @@
 
     <section id="cv">
       <h2>CV</h2>
-      <p><a href="CV_apr_2025.pdf" target="_blank">CV</a>(Updated April 2025).</p>
+      <p><a href="CV_apr_2025.pdf" target="_blank">CV</a> (Updated April 2025).</p>
     </section>
 
     <section id="contact">
