--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <section id="research">
       <h2>Research Interests</h2>
-      <p>I am currently interested in the analysis of partial differential equations and computer-assisted proofs in analysis.
+      <p>I am currently interested in the analysis of partial differential equations and computer-assisted proofs.
         My undergraduate research background is in the areas of kinetic equations and numerical spectral geometry.
       </p>
     </section>
