--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <img src="headshot.jpg" alt="Grayson R. Davis headshot">
       <div id="about-text">
         <h2>About</h2>
-        <p>I am a first-year PhD student at the Courant Institute of the Mathematical Sciences at New York University.
-            I am originally from Coquitlam, BC, Canada, and received my BSc (Hons.) in Mathematics from Simon Fraser University in 2020. 
+        <p>I am a first-year PhD student at the Courant Institute of the Mathematical Sciences at New York University (NYU).
+            I am originally from Coquitlam, BC, Canada, and received my BSc (Hons.) in Mathematics from Simon Fraser University (SFU) in 2020. 
             In my free time, I like to watch anime, go for walks/hikes, and check out the newest hit musicals on Broadway.
         </p>
       </div>
