--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <section id="notes">
       <h2>Notes & Other Writing</h2>
       <p><a href="nyu_grad_topology_i_notes.pdf" target="_blank">MATH-GA.2310 Topology I Notes</a> (NYU).</p>
-        <p><a href="grd_hons_thesis.pdf" target="_blank">Honours Thesis</a>, advised by Professor Nilima Nigam (SFU).</p>
+        <p>My honours thesis: <a href="grd_hons_thesis.pdf" target="_blank">Finite Element Approximation of the Modified Steklov-Maxwell Eigenproblem</a>, advised by Professor Nilima Nigam (SFU).</p>
     </section>
 
     <section id="cv">
