--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <img src="headshot.jpg" alt="Grayson R. Davis headshot">
       <div id="about-text">
         <h2>About</h2>
-        <p>I am a first-year PhD student at the Courant Institute of the Mathematical Sciences at New York University (NYU).
+        <p>I am a first-year PhD student in the Courant Institute of Mathematical Sciences at New York University (NYU).
             I am originally from Coquitlam, BC, Canada, and received my BSc (Hons.) in Mathematics from Simon Fraser University (SFU) in 2024. 
             In my free time, I like to watch anime, go for walks/hikes, and check out the newest hit musicals on Broadway.
         </p>
