--- a/index.html
+++ b/index.html
@@ -120,12 +120,9 @@
 
     <section id="notes">
       <h2>Notes & Other Writing</h2>
-      <p><a href="nyu_grad_topology_i_notes.pdf" target="_blank">MATH-GA.2310 Topology I
-      </a> typed notes (NYU).</p>
-      <p><a href="galois_notes.pdf" target="_blank">MATH 440 Galois Theory
-      </a> handwritten notes (SFU).</p>
-      <p><a href="comm_alg_notes.pdf" target="_blank">MATH 441 Commutative Algebra and Algebraic Geometry
-      </a> handwritten notes (SFU).</p>
+      <p><a href="nyu_grad_topology_i_notes.pdf" target="_blank">MATH-GA.2310 Topology I</a> typed notes (NYU).</p>
+      <p><a href="galois_notes.pdf" target="_blank">MATH 440 Galois Theory</a> handwritten notes (SFU).</p>
+      <p><a href="comm_alg_notes.pdf" target="_blank">MATH 441 Commutative Algebra and Algebraic Geometry</a> handwritten notes (SFU).</p>
       <p>My honours thesis: <a href="grd_hons_thesis.pdf" target="_blank">
           Finite Element Approximation of the Modified Steklov-Maxwell Eigenproblem</a>, 
           advised by Professor Nilima Nigam (SFU).</p>
