--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grayson R. Davis</title>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -29,6 +33,9 @@
       margin: 0;
     }
     nav {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
       text-align: center;
       background-color: #007acc;
       padding: 0.75rem 0;
