--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 
   <footer>
     &copy; 2025 Grayson R. Davis. All rights reserved.
+    <br>
+    <em>Picture: Mt. Fuji from Arakurayama Sengen Park (April 28, 2024)</em>
   </footer>
 
 </body>
