--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Grayson R. Davis</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     html {
       scroll-behavior: smooth;
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Merriweather Sans', sans-serif;
       margin: 0;
       background-color: #f4f4f4;
       color: #333;
@@ -78,6 +81,12 @@
       margin: 2rem 0;
       font-size: 0.9em;
       color: #777;
+    }
+
+    footer em {
+      color: #888;
+      font-style: italic;
+      font-size: 0.9rem;
     }
 
     /* Make the layout adjust nicely on small screens */
@@ -150,7 +159,9 @@
   <footer>
     &copy; 2025 Grayson R. Davis. All rights reserved.
     <br>
-    <em>Picture: Mt. Fuji from Arakurayama Sengen Park (April 28, 2024)</em>
+    <em>Banner: Mt. Fuji from Arakurayama Sengen Park (April 28, 2024), taken by me.</em>
+    <br>
+    <em>Headshot: taken by Photos by Cheryl.</em>
   </footer>
 
 </body>
