--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
     footer em {
       color: #888;
       font-style: italic;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
+    }
+
+    main {
+      animation: fadeIn 0.5s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     /* Make the layout adjust nicely on small screens */
