--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       top: 0;
       z-index: 1000;
       text-align: center;
-      background-color: #007acc;
+      background: rgba(255, 255, 255, 0.95); /* semi-transparent */
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       padding: 0.75rem 0;
     }
     nav a {
@@ -87,15 +89,6 @@
       color: #888;
       font-style: italic;
       font-size: 0.7rem;
-    }
-
-    main {
-      animation: fadeIn 0.5s ease-in;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
     }
 
     /* Make the layout adjust nicely on small screens */
