--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
       top: 0;
       z-index: 1000;
       text-align: center;
-      background: rgba(255, 255, 255, 0.95); /* semi-transparent */
-      backdrop-filter: blur(10px);
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      background-color: #007acc;
       padding: 0.75rem 0;
     }
     nav a {
