--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
         margin-bottom: 1rem;
       }
     }
+
+    #land-acknowledgment {
+      background-color: #f9f9f9;
+      padding: 2rem;
+      margin-top: 3rem;
+      border-top: 1px solid #ddd;
+      font-size: 0.95rem;
+      color: #555;
+    }
+    #land-acknowledgment h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -153,6 +166,13 @@
       <h2>Contact</h2>
       <p>Email: grayson.davis@nyu.edu</p>
       <p>Office: 608 Warren Weaver Hall</p>
+    </section>
+
+    <section id="land-acknowledgment">
+      <h2>Land Acknowledgment</h2>
+      <p>
+        I respectfully acknowledge that I work and live in Lenapehoking, the unceded traditional land of the Lenape peoples, which settlers now call New York City.
+      </p>
     </section>
   </main>
 
