--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
     <section id="land-acknowledgment">
       <h2>Land Acknowledgment</h2>
       <p>
-        I respectfully acknowledge that I work and live in Lenapehoking, the unceded traditional land of the Lenape peoples, which settlers now call New York City.
+        I respectfully acknowledge that I currently work and live in Lenapehoking, the unceded traditional land of the Lenape peoples, which settlers now call New York City.
+        It is important to recognize the ongoing and systemic violence of settler colonialism across North America and beyond.
+        I recognize that reconciliation is an active process, and I commit to reflecting on my role in it as a settler on Indigenous lands. 
+        To learn more about Land Acknowledgments and Positionality Statements, see
+        <a href="https://www.lib.sfu.ca/help/research-assistance/citing-sources/citations/land-acknowledgments">Traditional Territories: SFU's Land Acknowledgements</a> from the SFU Library.
       </p>
     </section>
   </main>
