--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
   </div>
 
   <nav>
-    <a href="#" id="about-link">About</a>
-    <a href="#" id="research-link">Research Interests</a>
-    <a href="#" id="notes-link">Notes</a>
-    <a href="#" id="cv-link">CV</a>
-    <a href="#" id="contact-link">Contact</a>
+    <a href="javascript:void(0)" id="about-link">About</a>
+    <a href="javascript:void(0)" id="research-link">Research Interests</a>
+    <a href="javascript:void(0)" id="notes-link">Notes</a>
+    <a href="javascript:void(0)" id="cv-link">CV</a>
+    <a href="javascript:void(0)" id="contact-link">Contact</a>
   </nav>
 
   <main>
