--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
   </div>
 
   <nav>
-    <a id="about-link">About</a>
-    <a id="research-link">Research Interests</a>
-    <a id="notes-link">Notes</a>
-    <a id="cv-link">CV</a>
-    <a id="contact-link">Contact</a>
+    <a href="javascript:void(0)" id="about-link">About</a>
+    <a href="javascript:void(0)" id="research-link">Research Interests</a>
+    <a href="javascript:void(0)" id="notes-link">Notes</a>
+    <a href="javascript:void(0)" id="cv-link">CV</a>
+    <a href="javascript:void(0)" id="contact-link">Contact</a>
   </nav>
 
   <main>
@@ -189,30 +189,32 @@
   </footer>
 
   <script>
-    // Prevent default behavior of menu links
-    document.getElementById('about-link').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log('About link clicked');
-    });
-
-    document.getElementById('research-link').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log('Research Interests link clicked');
-    });
-
-    document.getElementById('notes-link').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log('Notes link clicked');
-    });
-
-    document.getElementById('cv-link').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log('CV link clicked');
-    });
-
-    document.getElementById('contact-link').addEventListener('click', function(event) {
-      event.preventDefault();
-      console.log('Contact link clicked');
+    // Select all the navigation links
+    const navLinks = document.querySelectorAll('nav a');
+  
+    // Loop through each link
+    navLinks.forEach(link => {
+      link.addEventListener('click', function(event) {
+        event.preventDefault();  // Prevent URL change or page jump
+  
+        // Get the text content of the clicked link
+        const section = link.textContent.trim().toLowerCase(); // "about", "research", etc.
+        console.log(section + ' clicked');  // For debugging, can remove later
+  
+        // Based on the clicked link, we can perform custom actions here
+        if (section === 'about') {
+          // Example action: scroll to the About section (optional)
+          document.getElementById('about').scrollIntoView({ behavior: 'smooth' });
+        } else if (section === 'research interests') {
+          document.getElementById('research').scrollIntoView({ behavior: 'smooth' });
+        } else if (section === 'notes') {
+          document.getElementById('notes').scrollIntoView({ behavior: 'smooth' });
+        } else if (section === 'cv') {
+          document.getElementById('cv').scrollIntoView({ behavior: 'smooth' });
+        } else if (section === 'contact') {
+          document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
+        }
+      });
     });
   </script>
 
