--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       }
     }
 
-    #land-acknowledgment {
+    #land-acknowledgement {
       background-color: #f9f9f9;
       padding: 2rem;
       margin-top: 3rem;
@@ -108,7 +108,7 @@
       font-size: 0.95rem;
       color: #555;
     }
-    #land-acknowledgment h2 {
+    #land-acknowledgement h2 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
@@ -168,13 +168,13 @@
       <p>Office: 608 Warren Weaver Hall</p>
     </section>
 
-    <section id="land-acknowledgment">
+    <section id="land-acknowledegment">
       <h2>Land Acknowledgment</h2>
       <p>
         I respectfully acknowledge that I currently work and live in Lenapehoking, the unceded traditional land of the Lenape peoples, which settlers now call New York City.
         It is important to recognize the ongoing and systemic violence of settler colonialism across North America and beyond.
         I recognize that reconciliation is an active process, and I commit to reflecting on my role in it as a settler on Indigenous lands. 
-        To learn more about Land Acknowledgments and Positionality Statements, see
+        To learn more about Land Acknowledgements and Positionality Statements, see
         <a href="https://www.lib.sfu.ca/help/academic-integrity/indigenous-initiatives/traditional-territory">Traditional Territories: SFU's Land Acknowledgements</a> from the SFU Library.
       </p>
     </section>
