--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
       <p>Office: 608 Warren Weaver Hall</p>
     </section>
 
-    <section id="land-acknowledegment">
-      <h2>Land Acknowledgment</h2>
+    <section id="land-acknowledgement">
+      <h2>Land Acknowledgement</h2>
       <p>
         I respectfully acknowledge that I currently work and live in Lenapehoking, the unceded traditional land of the Lenape peoples, which settlers now call New York City.
         It is important to recognize the ongoing and systemic violence of settler colonialism across North America and beyond.
