--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <br>
     <em>Banner: Mt. Fuji from Arakurayama Sengen Park (April 28, 2024), taken by me.</em>
     <br>
-    <em>Headshot: taken by Photos by Cheryl (Cheryl Kathler).</em>
+    <em>Headshot: taken by <a href="https://photosbycheryl.com/">Photos by Cheryl</a>.</em>
   </footer>
 
   <script>
