--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: grayson.davis@nyu.edu</p>
+      <p>Email: grayson [dot] davis [at] nyu [dot] edu</p>
       <p>Office: 608 Warren Weaver Hall</p>
     </section>
 
