--- a/index.html
+++ b/index.html
@@ -127,6 +127,45 @@
       font-size: 1.5rem;
       margin-bottom: 1rem;
     }
+
+    nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: #f5f5f5;
+      padding: 0.5rem 1rem;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 1.5rem;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+/* Responsive behavior */
+    @media (max-width: 600px) {
+      .menu-toggle {
+        display: block;
+      }
+
+    .nav-links {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+      margin-top: 0.5rem;
+    }
+
+    .nav-links.active {
+      display: flex;
+    }
+  }
   </style>
 </head>
 <body>
@@ -136,11 +175,14 @@
   </div>
 
   <nav>
-    <a href="javascript:void(0)" id="about-link">About</a>
-    <a href="javascript:void(0)" id="research-link">Research Interests</a>
-    <a href="javascript:void(0)" id="notes-link">Notes</a>
-    <a href="javascript:void(0)" id="cv-link">CV</a>
-    <a href="javascript:void(0)" id="contact-link">Contact</a>
+    <button class="menu-toggle" aria-label="Toggle menu">☰</button>
+    <div class="nav-links">
+      <a href="javascript:void(0)" id="about-link">About</a>
+      <a href="javascript:void(0)" id="research-link">Research Interests</a>
+      <a href="javascript:void(0)" id="notes-link">Notes</a>
+      <a href="javascript:void(0)" id="cv-link">CV</a>
+      <a href="javascript:void(0)" id="contact-link">Contact</a>
+    </div>
   </nav>
 
   <main>
@@ -172,6 +214,12 @@
           advised by Professor Nilima Nigam (SFU).</p>
     </section>
 
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: grayson [dot] davis [at] nyu [dot] edu</p>
+      <p>Office: 608 Warren Weaver Hall</p>
+    </section>
+
     <section id="cv">
       <h2>Curriculum Vitae</h2>
       <iframe 
@@ -180,12 +228,6 @@
         height="800px" 
         style="border: none;">
       </iframe>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: grayson [dot] davis [at] nyu [dot] edu</p>
-      <p>Office: 608 Warren Weaver Hall</p>
     </section>
 
     <section id="land-acknowledgement">
@@ -235,6 +277,15 @@
           document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
         }
       });
+    });
+  </script>
+
+  <script>
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
+
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
     });
   </script>
 
