--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
 
   <script>
     const menuToggle = document.querySelector('.menu-toggle');
-    const navLinks = document.querySelector('.nav-links');
+    const navMenu = document.querySelector('.nav-links');
 
     menuToggle.addEventListener('click', () => {
-      navLinks.classList.toggle('active');
+      navMenu.classList.toggle('active');
     });
   </script>
 
