--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      text-align: center;
       background-color: #007acc;
-      padding: 0.75rem 0;
+      padding: 0.75rem 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      font-size: 1rem;
     }
     nav a {
       margin: 0 15px;
@@ -128,14 +133,6 @@
       margin-bottom: 1rem;
     }
 
-    nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background: #f5f5f5;
-      padding: 0.5rem 1rem;
-    }
-
     .nav-links {
       display: flex;
       gap: 1rem;
@@ -205,7 +202,7 @@
     </section>
 
     <section id="notes">
-      <h2>Notes & Other Writing</h2>
+      <h2>Notes</h2>
       <p><a href="nyu_grad_topology_i_notes.pdf" target="_blank">MATH-GA.2310 Topology I</a> typed notes (NYU).</p>
       <p><a href="galois_notes.pdf" target="_blank">MATH 440 Galois Theory</a> handwritten notes (SFU).</p>
       <p><a href="comm_alg_notes.pdf" target="_blank">MATH 441 Commutative Algebra and Algebraic Geometry</a> handwritten notes (SFU).</p>
