--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       justify-content: center;
       gap: 1rem;
       font-size: 1rem;
+      background-color: #007acc;
     }
 
     @media (max-width: 600px) {
@@ -177,8 +178,8 @@
       <a href="javascript:void(0)" id="about-link">About</a>
       <a href="javascript:void(0)" id="research-link">Research Interests</a>
       <a href="javascript:void(0)" id="notes-link">Notes</a>
-      <a href="javascript:void(0)" id="cv-link">CV</a>
       <a href="javascript:void(0)" id="contact-link">Contact</a>
+      <a href="javascript:void(0)" id="cv-link">CV</a>
     </div>
   </nav>
 
@@ -240,8 +241,8 @@
   </main>
 
   <footer>
-    &copy; 2025 Grayson R. Davis. All rights reserved.
-    <br>
+    <!-- &copy; 2025 Grayson R. Davis. All rights reserved.
+    <br> -->
     <em>Banner: Mt. Fuji from Arakurayama Sengen Park (April 28, 2024), taken by me.</em>
     <br>
     <em>Headshot: taken by <a href="https://photosbycheryl.com/">Photos by Cheryl</a>.</em>
